# nautilus-open-sublime

./: AUTHORS  ChangeLog  NEWS  README  compile_flags.txt  configure.ac  package.json
po/: Makevars  POTFILES.in
src/: Makefile.am  nautilus-open-sublime.c
